# OpenShell

./: README.md  snapcraft.yaml
.agents/skills/debug-openshell-cluster/: SKILL.md
.agents/skills/helm-dev-environment/: SKILL.md
.agents/skills/openshell-cli/: SKILL.md
.github/workflows/: branch-checks.yml  branch-e2e.yml  e2e-kubernetes-test.yml  release-dev.yml  release-tag.yml  snap-package.yml
architecture/: build.md  compute-runtimes.md  gateway.md  sandbox.md
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-bootstrap/src/: edge_token.rs  lib.rs  metadata.rs  mtls.rs  oidc_token.rs  paths.rs
crates/openshell-cli/: Cargo.toml
crates/openshell-cli/src/: main.rs  run.rs
crates/openshell-cli/tests/: provider_commands_integration.rs  sandbox_create_lifecycle_integration.rs
crates/openshell-core/: Cargo.toml  build.rs
crates/openshell-core/src/: activity.rs  config.rs  denial.rs  driver_mounts.rs  driver_utils.rs  grpc_client.rs  grpc_retry.rs  lib.rs  net.rs  ocsf_ctx.rs  paths.rs  policy.rs  proposals.rs  provider_credentials.rs  sandbox_env.rs  secrets.rs  telemetry.rs
crates/openshell-core/src/grpc/: auth.rs  mod.rs  transport.rs
crates/openshell-core/src/netns/: mod.rs
crates/openshell-driver-docker/: Cargo.toml
crates/openshell-driver-docker/src/: lib.rs  tests.rs
crates/openshell-driver-kubernetes/: Cargo.toml  README.md
crates/openshell-driver-kubernetes/src/: config.rs  driver.rs  main.rs
crates/openshell-driver-podman/: Cargo.toml  README.md
crates/openshell-driver-podman/src/: client.rs  config.rs  container.rs  driver.rs  grpc.rs  main.rs
crates/openshell-driver-vm/: Cargo.toml
crates/openshell-driver-vm/src/: rootfs.rs
crates/openshell-ocsf/src/: ctx.rs  lib.rs
crates/openshell-ocsf/src/format/: shorthand.rs
crates/openshell-policy/: Cargo.toml
crates/openshell-policy/src/: lib.rs
crates/openshell-providers/: Cargo.toml
crates/openshell-providers/src/: discovery.rs  profiles.rs
crates/openshell-router/: Cargo.toml
crates/openshell-sandbox/: Cargo.toml
crates/openshell-sandbox/src/: activity_aggregator.rs  denial_aggregator.rs  identity.rs  lib.rs  main.rs  mechanistic_mapper.rs  opa.rs  process.rs  proxy.rs  ssh.rs  token_grant.rs
crates/openshell-sandbox/src/sandbox/linux/: landlock.rs  seccomp.rs
crates/openshell-server/: Cargo.toml
crates/openshell-server/src/: cli.rs  config_file.rs  lib.rs  main.rs  multiplex.rs  otlp_exporter.rs  tracing_bus.rs
crates/openshell-server/src/auth/: principal.rs
crates/openshell-server/src/compute/: mod.rs
crates/openshell-server/src/grpc/: policy.rs  provider.rs
crates/openshell-supervisor/: Cargo.toml
crates/openshell-supervisor-network/: Cargo.toml
crates/openshell-supervisor-network/src/: bypass_monitor.rs  denial_aggregator.rs  grpc_client.rs  identity.rs  inference_routes.rs  lib.rs  opa.rs  policy_local.rs  proxy.rs  run.rs  secrets.rs  spiffe_endpoint.rs
crates/openshell-supervisor-network/src/l7/: graphql.rs  mod.rs  relay.rs  rest.rs  token_grant_injection.rs  websocket.rs
crates/openshell-supervisor-network/tests/: system_inference.rs  websocket_upgrade.rs
crates/openshell-supervisor-networking/src/: identity.rs  lib.rs
crates/openshell-supervisor-process/: Cargo.toml
crates/openshell-supervisor-process/src/: bypass_monitor.rs  debug_rpc.rs  grpc_client.rs  lib.rs  log_push.rs  managed_children.rs  process.rs  provider_credentials.rs  run.rs  ssh.rs  supervisor_session.rs
crates/openshell-supervisor-process/src/bypass_monitor/: mod.rs  procfs.rs
crates/openshell-supervisor-process/src/netns/: mod.rs
crates/openshell-supervisor-process/src/sandbox/: mod.rs
crates/openshell-supervisor-process/src/sandbox/linux/: landlock.rs  mod.rs  seccomp.rs
crates/openshell-supervisor/src/: bypass_monitor.rs  debug_rpc.rs  lib.rs  main.rs  process.rs  proxy.rs  ssh.rs  supervisor_session.rs
crates/openshell-supervisor/src/sandbox/: mod.rs
crates/openshell-supervisor/src/sandbox/linux/: landlock.rs  mod.rs  seccomp.rs
crates/openshell-supervisor/tests/: system_inference.rs  websocket_upgrade.rs
crates/openshell-tui/: Cargo.toml
crates/openshell-tui/src/: app.rs  lib.rs
crates/openshell-tui/src/ui/: dashboard.rs  global_settings.rs  mod.rs  sandbox_settings.rs
deploy/helm/openshell/: README.md  README.md.gotmpl  skaffold.yaml  values.yaml
deploy/helm/openshell/ci/: values-high-availability.yaml  values-spire-stack.yaml  values-spire.yaml
deploy/helm/openshell/templates/: _gateway-workload.tpl  _helpers.tpl  deployment.yaml  gateway-config.yaml  otel-collector.yaml  statefulset.yaml
deploy/helm/openshell/tests/: gateway_config_test.yaml
docs/kubernetes/: access-control.mdx  openshift.mdx  setup.mdx
docs/reference/: gateway-auth.mdx  gateway-config.mdx  sandbox-compute-drivers.mdx  support-matrix.mdx
docs/sandboxes/: manage-gateways.mdx  manage-sandboxes.mdx  providers-v2.mdx
docs/security/: best-practices.mdx
e2e/: with-docker-gateway.sh  with-kube-gateway.sh  with-podman-gateway.sh
e2e/kubernetes/: postgres-fixture.yaml
e2e/python/: test_sandbox_policy.py
e2e/rust/: Cargo.toml  e2e-openshift.sh
e2e/rust/tests/: cli_smoke.rs  driver_config_volume.rs  forward_proxy_l7_bypass.rs
examples/spiffe-token-grant-demo/: README.md  demo.sh  provider-profile.yaml
examples/spiffe-token-grant-demo/k8s/: kustomization.yaml  protected-service.js  token-issuer.js  workloads.yaml
proto/: compute_driver.proto  openshell.proto
tasks/: ci.toml  rust.toml  test.toml
tasks/scripts/: cluster-deploy-fast.sh  gateway-docker.sh  stage-prebuilt-binaries.sh  verify-telemetry-compiled-out.sh
tasks/scripts/vm/: build-supervisor-bundle.sh
