# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-supervisor-network"
description = "OpenShell supervisor network component (proxy, OPA, L7 enforcement)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core" }
openshell-ocsf = { path = "../openshell-ocsf" }
openshell-policy = { path = "../openshell-policy" }
openshell-router = { path = "../openshell-router" }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# gRPC (TLS handled in openshell-core::grpc)
tonic = { workspace = true, features = ["channel"] }

# Error handling
miette = { workspace = true }
thiserror = { workspace = true }

# OPA policy evaluation
regorus = { version = "0.9", default-features = false, features = ["std", "arc", "glob", "yaml"] }

# TLS
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
webpki-roots = { workspace = true }

# HTTP / encoding
bytes = { workspace = true }
base64 = { workspace = true }
flate2 = "1"
sha1 = "0.10"

# IP network / CIDR parsing
ipnet = "2"

# Serialization / parsing
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
apollo-parser = { workspace = true }
glob = { workspace = true }

# Logging
tracing = { workspace = true }

# Unix/Process
nix = { workspace = true }

# UUID (used for WebSocket masking key generation)
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
